@@ -32,7 +32,7 @@
 short
 get_config_data(struct waste_containers *waste, const char *alt_config,
       const char *HOMEDIR, unsigned short *purge_after_ptr, bool list,
-      int *waste_ctr, char protected_dir[PROTECT_MAX][MP],
+      char protected_dir[PROTECT_MAX][MP],
       int *prot_dir_ctr, bool *force_ptr);
 
 bool
