@@ -32,15 +32,14 @@
 
 short
 Restore (int argc, char *argv[], int optind, char *time_str_appended,
-          struct waste_containers *waste, const int waste_dirs_total);
+          struct waste_containers *waste);
 
 void
-restore_select (struct waste_containers *waste, char *time_str_appended,
-                const int wdt);
+restore_select (struct waste_containers *waste, char *time_str_appended);
 
 void
 undo_last_rmw (const char *HOMEDIR, char *time_str_appended,
-               struct waste_containers *waste, const int waste_dirs_total);
+               struct waste_containers *waste);
 
 int
 getch (void);
