@@ -1,5 +1,10 @@
 === rmw ChangeLog ===
 
+2016-09-26
+
+    no longer using var: waste_dirs_total. NULL is assigned as the last
+    WASTE folder, so loops check for NULL to see when it's time to quit.
+
 2016-09-25
 
     -p, --pause option removed
